--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
+@import "leaflet/dist/leaflet.css";
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
  
 @layer base {
   :root {
